--- a/index.html
+++ b/index.html
@@ -9,34 +9,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+    <!-- 应用主容器 -->
     <div class="app-container">
         <!-- 聊天区域 -->
         <div class="chat-area">
+            <!-- 聊天区域头部 -->
             <div class="chat-header">
                  <!-- 设置按钮 -->
                  <button id="settings-button" title="设置">
-                    <i class="fas fa-cog"></i>
+                    <i class="fas fa-cog"></i> <!-- 齿轮图标 -->
                 </button>
             </div>
+            <!-- 聊天消息容器 -->
             <div id="chat-container">
                 <!-- 消息将在这里动态添加 -->
             </div>
 
+            <!-- 消息输入区域 -->
             <div id="message-input-container">
-                <textarea id="user-input" placeholder="输入你的消息..." rows="1"></textarea> <!-- 初始改为1行，自动增高 -->
+                <textarea id="user-input" placeholder="输入你的消息..." rows="1"></textarea> <!-- 用户输入框 -->
                 <button id="send-button" title="发送">
-                    <i class="fas fa-paper-plane"></i>
+                    <i class="fas fa-paper-plane"></i> <!-- 发送图标 -->
                 </button>
             </div>
 
+            <!-- 对话存储控制按钮 -->
             <div class="storage-controls">
+                 <!-- 保存按钮 -->
                  <button id="save-button" title="保存对话">
                     <i class="fas fa-save"></i> 保存
                 </button>
+                <!-- 加载按钮 (使用 label 包装 input[type=file]) -->
                 <label for="load-input" class="load-button" title="加载对话">
                     <i class="fas fa-upload"></i> 加载
                 </label>
-                <input type="file" id="load-input" accept=".json" style="display: none;">
+                <input type="file" id="load-input" accept=".json" style="display: none;"> <!-- 隐藏的文件选择框 -->
+                 <!-- 清空按钮 -->
                  <button id="clear-button" title="清空对话">
                      <i class="fas fa-trash-alt"></i> 清空
                  </button>
@@ -47,12 +55,17 @@
     <!-- 设置模态弹窗 -->
     <div id="settings-modal" class="modal">
         <div class="modal-content">
+            <!-- 关闭按钮 -->
             <span class="close-button" title="关闭">×</span>
             <h2>设置</h2>
+
+            <!-- API Key 输入 -->
             <div class="setting-item">
                 <label for="api-key">API Key:</label>
                 <input type="password" id="api-key" placeholder="输入你的 DeepSeek API Key">
             </div>
+
+            <!-- 模型选择 -->
             <div class="setting-item">
                 <label for="model-select">模型:</label>
                 <select id="model-select">
@@ -60,16 +73,51 @@
                     <option value="deepseek-reasoner" selected>deepseek-reasoner</option>
                 </select>
             </div>
+
+            <!-- 温度 (Temperature) -->
             <div class="setting-item">
-                <label for="temperature">Temperature (<span id="temp-value">0.7</span>):</label>
+                <label for="temperature">随机性 (Temperature) (<span id="temp-value">0.7</span>):</label>
                 <input type="range" id="temperature" min="0" max="2" step="0.1" value="0.7">
-            </div>
-            <div class="setting-item">
-                <label for="frequency-penalty">重复惩罚 (<span id="penalty-value">0.5</span>):</label>
-                <input type="range" id="frequency-penalty" min="0" max="2" step="0.1" value="0.5">
+                <span class="setting-description">值越高越随机，越低越稳定。</span>
             </div>
 
-            <!-- 新增：预设提示词选择 -->
+             <!-- 核采样 (Top P) -->
+             <div class="setting-item">
+                 <label for="top-p">核采样 (Top P) (<span id="top-p-value">1.0</span>):</label>
+                 <input type="range" id="top-p" min="0" max="1" step="0.05" value="1.0">
+                 <span class="setting-description">建议只调整 Temperature 或 Top P 其中之一。</span>
+             </div>
+
+            <!-- 最大令牌数 (Max Tokens) -->
+            <div class="setting-item">
+                <label for="max-tokens">最大令牌数 (Max Tokens):</label>
+                <input type="number" id="max-tokens" min="1" max="8192" step="1" placeholder="默认 4096">
+                 <span class="setting-description">限制 AI 回复的最大长度。</span>
+            </div>
+
+             <!-- 停止符 (Stop Sequences) -->
+             <div class="setting-item">
+                 <label for="stop-sequences">停止符 (Stop Sequences):</label>
+                 <input type="text" id="stop-sequences" placeholder="可选, 英文逗号分隔, 如 stop,end">
+                  <span class="setting-description">遇到这些词语时停止生成。</span>
+             </div>
+
+            <!-- 频率惩罚 (Frequency Penalty) -->
+            <div class="setting-item">
+                <label for="frequency-penalty">频率惩罚 (<span id="freq-penalty-value">0.5</span>):</label>
+                <input type="range" id="frequency-penalty" min="-2" max="2" step="0.1" value="0.5">
+                 <span class="setting-description">正值降低重复内容。</span>
+            </div>
+
+            <!-- 存在惩罚 (Presence Penalty) -->
+            <div class="setting-item">
+                <label for="presence-penalty">存在惩罚 (<span id="pres-penalty-value">0.0</span>):</label>
+                <input type="range" id="presence-penalty" min="-2" max="2" step="0.1" value="0.0">
+                 <span class="setting-description">正值鼓励谈论新主题。</span>
+            </div>
+
+
+            <!-- 预设提示词选择 -->
             <div class="setting-item">
                 <label for="predefined-prompt-select">选择提示词模板:</label>
                 <select id="predefined-prompt-select">
@@ -77,12 +125,13 @@
                 </select>
             </div>
 
-            <!-- 现有：自定义系统提示词 -->
+            <!-- 自定义系统提示词 -->
             <div class="setting-item">
                 <label for="system-prompt">系统提示词 (System Prompt):</label>
                 <textarea id="system-prompt" rows="4" placeholder="选择上方的模板或在此处输入自定义提示词"></textarea>
             </div>
 
+            <!-- 思维链默认可见 -->
              <div class="setting-item">
                  <label>
                     <input type="checkbox" id="reasoning-default-visible" checked> 默认显示思维链
@@ -91,6 +140,7 @@
         </div>
     </div>
 
+    <!-- JavaScript 文件引用 -->
     <script src="script.js"></script>
 </body>
 </html>
